syntax = "proto3";

package cart;

option go_package = "cart-microservice/services/cart-ms/adaptors/grpc/pb;pb";

service CartService {
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse);
  rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
}

message AddItemRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message AddItemResponse {
  string message = 1;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
  double total = 2;
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3; 
}


message RemoveFromCartRequest {
  string user_id = 1;
  string product_id = 2;
}

message RemoveFromCartResponse {
  string message = 1;
}

message ClearCartRequest {
  string user_id = 1;
}

message ClearCartResponse {
  string message = 1;
}


// protoc -I=proto --go_out=services/cart-ms/adaptors/grpc/pb --go-grpc_out=services/cart-ms/adaptors/grpc/pb proto/cart.proto

